Add bread and lemonade recipes.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,11 +9,11 @@
 <body>
     <h1>Lasagna</h1>
 
-        <img src="../images/lasagna.jpg">
+        <img src="../images/lasagna.jpg"
     
-    <h2>Quick and easy Lasagna recipe.</h2>
+    <h2>Quick and easy lasagna recipe.</h2>
 
-        <p>Here is a simple recipe for Lasagna. It is made using lasagna noodles, cheese, meat, and tomato sauce.</p>
+        <p>Here is a simple recipe for lasagna. It is made using lasagna noodles, cheese, meat, and tomato sauce.</p>
 
     <h2>Ingredients</h2>
         <ul>
